--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 
     </div>
 
-    <div><select id="myselect">
+    <div><select id="select-director">
       <option disabled selected value="">Selecione el director</option>
     </select></div>
 
@@ -43,9 +43,10 @@
 
     <div class="card-container" id="card-character"></div>
 
-  
+    <div clss="card-container" id="card-films-director"></div>
 
-   
+  
+  
     
   
 
