se agrega cambio donde se pone el filtro de orden de AZ y ZA

--- a/src/index.html
+++ b/src/index.html
@@ -40,10 +40,15 @@
       <option disabled selected value="">Selecione el año</option>
     </select></div>
 
+    <div><select class="select" id="order-movies">
+      <option disabled selected value="">Ordenar por nombre</option>
+      <option value="AZ">Ordenar de la A - Z</option>
+      <option value="ZA">Ordenar de la Z - A</option>
+    </select></div>
+
   </div>  
    
     
-  
     <div class="card-container" id="card-container"></div>
     
   
