se agregan div en HTML para agregar las personajes, lugaes y vehiclos

--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,10 @@
 
   </div>  
    
-    
     <div class="card-container" id="card-container"></div>
+    <div class="card-container" id="card-characters"></div>
+    <div class="card-container" id="card-places"></div>
+    <div class="card-container" id="card-vehicles"></div>
     
   
     <div>
