--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,10 @@
     <div class="card-container" id="card-characters"></div>
     <div class="card-container" id="card-places"></div>
     <div class="card-container" id="card-vehicles"></div>
+    <div class="modal-container" id="modal">
+      <div class="modal" name= "character"  id="modal-info"></div>
+      <button  id="close">X</button>
+    </div>
 
   <script src="main.js" type="module"></script>
 </body>
