se hacen cambios en main para agregar el nombre de la pelicula

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
     </div>
 
     <div class="card-container" id="card-container"></div>
+    <div class="card-container" id="card-title"></div>
     <div class="card-container" id="card-characters"></div>
     <div class="card-container" id="card-places"></div>
     <div class="card-container" id="card-vehicles"></div>
