Tabla de indicadores realizada

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
           <option disabled selected value="">Selecione el año</option>
         </select></div>
 
-      <div><select class="select" id="order-movies">
+      <div><select style="color: azure"; class="select" id="order-movies">
           <option disabled selected value="">Ordenar por nombre</option>
           <option value="AZ">Ordenar de la A - Z</option>
           <option value="ZA">Ordenar de la Z - A</option>
@@ -50,6 +50,20 @@
       <div class="modal" name= "character"  id="modal-info"></div>
       <button  id="close">X</button>
     </div>
+
+    <hr width="100%">
+    <table id="table">
+      <h1>Información adicional</h1>
+        <tr>
+          <th>Película</th>
+          <th>Descripción</th>
+          <th>Puntaje</th>
+          <th>Director</th>
+          <th>Productor</th>
+          <th>Año</th>
+        </tr>
+    </table>
+    
 
   <script src="main.js" type="module"></script>
 </body>
