se resuleve problema de test, ya quedaron superior al 70%

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
           <option disabled selected value="">Selecione el año</option>
         </select></div>
 
-      <div><select style="color: azure"; class="select" id="order-movies">
+      <div><select style="color: azure" class="select" id="order-movies">
           <option disabled selected value="">Ordenar por nombre</option>
           <option value="AZ">Ordenar de la A - Z</option>
           <option value="ZA">Ordenar de la Z - A</option>
