se hacen ajustes css, cambio de nombres

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
     <figure>
       <img id="imagen-baner" src="./imagenes/ghibliprojectbanner.jpg"
         alt="baner de ghibli studio, en el fondo hay un bosque con un dibujo  ">
-    </figure>
+    </figure><br>
 
-      <h1>Viento calido del desierto</h1>
+      <h1>Viento calido del desierto </h1>
 
       <div class="linea"></div>
       <br><br>
@@ -27,19 +27,23 @@
 
       <div><select class="select" id="select-director">
           <option disabled selected value="">Selecione el director</option>
-        </select></div>
+        </select>
+      </div>
 
       <div><select class="select" id="select-year">
           <option disabled selected value="">Selecione el año</option>
-        </select></div>
+        </select>
+      </div>
 
       <div><select style="color: azure" class="select" id="order-movies">
           <option disabled selected value="">Ordenar por nombre</option>
           <option value="AZ">Ordenar de la A - Z</option>
           <option value="ZA">Ordenar de la Z - A</option>
-        </select></div>
+        </select>
+      </div>
 
     </div>
+    
 
     <div class="card-container" id="card-container"></div>
     <div class="card-container" id="card-title"></div>
