se agrega boton para regresar a todas las peliculas

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       <div class="linea"></div>
       <br><br>
 
-    <div class="div-select">
+    <section class="div-select">
 
       <div id="search-button">
         <input type="text" class="select" id="search" placeholder="Buscar por el nombre" required>
@@ -42,7 +42,7 @@
         </select>
       </div>
 
-    </div>
+    </section>
     
 
     <div class="card-container" id="card-container"></div>
@@ -54,19 +54,27 @@
       <div class="modal" name= "character"  id="modal-info"></div>
       <button  id="close">X</button>
     </div>
+    <footer>
+      <button class="back" id="backToMovies">Regresar a las peliculas</button>
+    </footer>
+   
+   
 
-    <hr width="100%">
-    <table id="table">
-      <h1>Información adicional</h1>
-        <tr>
-          <th>Película</th>
-          <th>Descripción</th>
-          <th>Puntaje</th>
-          <th>Director</th>
-          <th>Productor</th>
-          <th>Año</th>
-        </tr>
-    </table>
+  <hr width="100%">
+  <table id="table">
+    <h1>Información adicional</h1>
+      <tr>
+        <th>Película</th>
+        <th>Descripción</th>
+        <th>Puntaje</th>
+        <th>Director</th>
+        <th>Productor</th>
+        <th>Año</th>
+      </tr>
+  </table>
+
+
+
     
 
   <script src="main.js" type="module"></script>
