se agregan cambios al boton de regresar

--- a/src/index.html
+++ b/src/index.html
@@ -41,10 +41,13 @@
           <option value="ZA">Ordenar de la Z - A</option>
         </select>
       </div>
-
+      <div>
+        <button class="select" id="backToMovies">Regresar a las peliculas</button>
+      </div>
+     
     </section>
     
-
+ 
     <div class="card-container" id="card-container"></div>
     <div class="card-container" id="card-title"></div>
     <div class="card-container" id="card-characters"></div>
@@ -52,11 +55,10 @@
     <div class="card-container" id="card-vehicles"></div>
     <div class="modal-container" id="modal">
       <div class="modal" name= "character"  id="modal-info"></div>
-      <button  id="close">X</button>
+      <button class="button-modal" id="close">X</button>
     </div>
-    <footer>
-      <button class="back" id="backToMovies">Regresar a las peliculas</button>
-    </footer>
+  
+ 
    
    
 
